# privacyintent

./: LICENSE  README.md  pyproject.toml
docs/: PROJECT-VISION.md  README.md  STACK-INVENTORY.md
privacy_intent/: automation.py  bootstrap.py  cli.py  models.py  scanner.py
privacy_intent/detectors/: cookies.py  headers.py  pii.py  third_party.py  trackers.py
privacy_intent/plugins/: loader.py
privacy_intent/reporting/: console.py  diff_report.py  json_report.py  markdown_report.py  sarif_report.py
privacy_intent/scoring/: privacy_score.py
privacyintent/: __init__.py  cli.py  scanner.py
privacyintent/detectors/: headers.py  third_party.py  trackers.py
privacyintent/plugins/: loader.py
privacyintent/reporting/: console.py  json_report.py  markdown_report.py
privacyintent/scoring/: privacy_score.py
tests/: test_automation.py  test_bootstrap.py  test_diff_report.py  test_monitor_cli.py  test_sarif_report.py  test_scanner.py
